--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -12,19 +12,19 @@
         <table width="100%">
             <tr>
                 <td>Amount</td>
-                <td align="right">₹ 5500</td>
+                <td align="right">₹ 4700</td>
                 <td><button class="cpb" onclick="copyAmount()">COPY</button></td>
             </tr>
             <tr>
                 <td>VPA/UPI</td>
-                <td align="right" class="upi-display">ranjitrudrapaul69@okicici</td>
+                <td align="right" class="upi-display">ovenom822-1@okhdfcbank</td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </tr>
         </table>
         <table width="100%">
             <tr>
                 <td>Name</td>
-                <td align="right">Ishan Deb</td>
+                <td align="right">IMAN MIAH</td>
             </tr>
         </table>
         <br>
