--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -17,7 +17,7 @@
             </tr>
             <tr>
                 <td>VPA/UPI</td>
-                <td align="right" class="upi-display">ovenom822-1@okhdfcbank</td>
+                <td align="right" class="upi-display">8974034614@upi</td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </tr>
         </table>
