--- a/repayyx.payxfast.com/index.html
+++ b/repayyx.payxfast.com/index.html
@@ -16,7 +16,7 @@
                 <tr>
                     <tr>
                 <td>VPA/UPI</td>
-              <td> <h5 align="right" class="upi-display">unicashofficial02@okhdfcbank</h5> </td>
+              <td> <h5 align="right" class="upi-display">ramushil276-1@oksbi</h5> </td>
                 <td><button class="cpb" onclick="copyUPI()">COPY</button></td>
             </td>
         </table>
@@ -24,7 +24,7 @@
             <tr> 
                 <tr>
                 <td>Name</td>
-                <td> <h5 align="right">SHIPAN SHIL </h5> </td>
+                <td> <h5 align="right">Swapna Shil</h5> </td>
             </td>
         </table>
         <h3 class="a1">↓ Select payment method and pay ↓</h3><tr>
